--- a/H1EmuLauncher/Windows/DisclaimerWindow.xaml
+++ b/H1EmuLauncher/Windows/DisclaimerWindow.xaml
@@ -85,20 +85,21 @@
                 <Button x:Name="ExitButton"
                         Grid.Column="2"
                         Click="CloseDisclaimerWindow"
+                        Background="{DynamicResource RedAccent}"
                         Width="50"
                         Height="30"
                         Margin="20"
                         VerticalAlignment="Top"
-                        HorizontalAlignment="Right"
-                        Style="{StaticResource CloseButtonStyle}">
+                        Style="{StaticResource ToolBarButtonStyle}">
 
-                    <Button.Effect>
-                        <DropShadowEffect BlurRadius="15"
-                                          Direction="-90"
-                                          RenderingBias="Quality"
-                                          ShadowDepth="0"
-                                          Opacity="0.3"/>
-                    </Button.Effect>
+                    <Button.Content>
+                        <Path Data="{DynamicResource XIcon}"
+                              Stretch="Uniform"
+                              Fill="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}"
+                              Width="10"
+                              Height="10"/>
+
+                    </Button.Content>
                 </Button>
             </Grid>
 
